--- a/index.html
+++ b/index.html
@@ -187,6 +187,29 @@
                     </div>
                 </div>
             </div>
+            <div class="post-2">
+                <div class="p-photo">
+                    <img src="./assets/img/Tweet-Profile-Photo.svg" alt="" class="pp">
+                </div>
+                <div class="content">
+                    <div class="p-name">
+                        <h5>CTwitter <i class="icon-20 icon-verified"></i> <span>@Twitter</span><span> . Oct 4</span>
+                        </h5>
+                    </div>
+                    <div class="caption">
+                        <p>hello literally everyone</p>
+                    </div>
+                    <div class="reaction">
+                        <div>
+                            <i class="icon-20 icon-reply"></i> <span>57</span>
+                        </div>
+                        <div><i class="icon-20 icon-retweet"></i><span>144</span></div>
+                        <div><i class="icon-20 icon-react"></i><span>184</span></div>
+                        <div class="mg-100"><i class="icon-20 icon-share"></i></div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div class="box-3">
             <div class="search">
